--- a/templates/portfolio/home.html
+++ b/templates/portfolio/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Home | 순천만 국제정원{% endblock %}
+{% block title %}정원 | 순천만 국제정원{% endblock %}
 
 {% block content %}
 <section class="relative">
