--- a/templates/portfolio/seasons.html
+++ b/templates/portfolio/seasons.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}The Seasons | 순천만 국제정원{% endblock %}
+{% block title %}정원의 사계 | 순천만 국제정원{% endblock %}
 
 {% block content %}
 <section class="max-w-6xl mx-auto px-6 py-16">
