--- a/templates/portfolio/about.html
+++ b/templates/portfolio/about.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}About | SC GARDEN{% endblock %}
+{% block title %}작가소개 | 순천만정원{% endblock %}
 
 {% block content %}
 <section class="max-w-4xl mx-auto px-6 py-20">
