--- a/templates/portfolio/photo_edit.html
+++ b/templates/portfolio/photo_edit.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Edit Photo | SC GARDEN{% endblock %}
+{% block title %}사진관리 | 순천만정원{% endblock %}
 
 {% block content %}
 <section class="max-w-5xl mx-auto px-6 py-16">
