--- a/templates/portfolio/about.html
+++ b/templates/portfolio/about.html
@@ -8,7 +8,7 @@
     <div class="text-sm leading-7 text-gray-600">
         <p>순천만 정원은 계절마다 다른 온도와 빛을 들려줍니다. 저는 그 순간이 사라지기 전에 조용히 기록합니다.</p>
         <p class="mt-4">사진은 결국 기억을 붙잡는 방법이라 믿습니다. 작은 산책이 가장 큰 위로가 되던 날들을 이곳에 담아둡니다.</p>
-        <p class="mt-4">이 공간은 정원의 숨결을 함께 나누는 작은 포트폴리오입니다.</p>
+        <p class="mt-4">이 공간은 정원의 숨결을 함께 나누는 작은 포트폴리오입니다. 감사</p>
     </div>
 </section>
 {% endblock %}
